--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,45 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply text-3xl font-bold underline;
+    }
+
+    h2 {
+        @apply text-2xl font-bold;
+    }
+
+    h2 span {
+        @apply text-xs block text-orange-600;
+    }
+
+    a {
+        @apply text-sm font-bold italic text-blue-500 pb-3;
+    }
+
+    a:hover {
+        @apply text-blue-400;
+    }
+}
+
+@layer components {
+    .header {
+        @apply bg-orange-100 w-1/3 ml-10 p-5 absolute z-10 rounded-xl;
+    }
+
+    .userCard {
+        @apply flex flex-col;
+    }
+
+    .userCard img {
+        @apply rounded-full w-9/12 mx-auto my-6;
+    }
+}
+
 #mapContainer {
     width: 500px;
     height: 500px;
+    margin-left: 620px;
 }
